Декоративные элементы главной страницы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -275,7 +275,7 @@
       {#
     </div> #}
   </section>
-  <section class="contacts contact--theme">
+  <section class="contacts contacts--theme">
     <div class="contacts__wrapper page__centerer">
       <h2 class="visually-hidden">Наш адрес</h2>
       <div class="contacts__informative">
