--- a/source/form.html
+++ b/source/form.html
@@ -30,13 +30,19 @@
           <fieldset class="form__filter-radio form__filter--border">
             <legend class="visually-hidden">Нужды питомца</legend>
             <label class="form__label form__label--wl" for="weight-loss">
-              <input class="form__radio" type="radio" name="pet-needs" id="weight-loss" checked>Похудение
+              <input class="form__radio" type="radio" name="pet-needs" id="weight-loss" checked>
+              <span class="form__checkmark"></span>
+              Похудение
             </label>
             <label class="form__label" for="weight-gain">
-              <input class="form__radio" type="radio" name="pet-needs" id="weight-gain">Набор Массы
+              <input class="form__radio" type="radio" name="pet-needs" id="weight-gain">
+              <span class="form__checkmark"></span>
+              Набор Массы
             </label>
             <label class="form__label form__label--doubts" for="doubts">
-              <input class="form__radio" type="radio" name="pet-needs" id="doubts">Не знаю (Нужен ваш совет)
+              <input class="form__radio" type="radio" name="pet-needs" id="doubts">
+              <span class="form__checkmark"></span>
+              Не знаю (Нужен ваш совет)
             </label>
           </fieldset>
         </div>
