--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
           <source media="(min-width: 768px)" srcset="img/index-can-tablet.jpg">
           <img class="main-promo__product-img" src="../img/index-can-mobile.png" alt="Банка корма для котов." width="280" height="270" />
         </picture>
-        <a href="#" class="main-promo__button-programs button">Подобрать Программу</a>
+        <a href="form.html" class="main-promo__button-programs button">Подобрать Программу</a>
       </div>
     </div>
   </section>
@@ -24,7 +24,7 @@
       <ul class="programs__list">
         <li class="programs__item">
           <div class="programs__item-wrapper programs__item-wrapper--slim">
-            <h3 class="programs__title programs__title">Похудение</h3>
+            <h3 class="programs__title programs__title--slim">Похудение</h3>
             <p class="programs__description">
               Ваш кот весит больше собаки и почти утратил способность лазить
               по деревьям? Пора на диету! Cat Energy Slim поможет вашему
@@ -35,7 +35,7 @@
         </li>
         <li class="programs__item">
           <div class="programs__item-wrapper programs__item-wrapper--weight-gain">
-            <h3 class="programs__title programs__title">
+            <h3 class="programs__title programs__title--weight">
               Набор Массы
             </h3>
             <p class="programs__description">
@@ -81,7 +81,7 @@
   </section>
   <section class="motivation">
     <div class="motivation__content page__centerer">
-      <h2 class="motivation__title">Живой Пример</h2>
+      <h2 class="motivation__title">Живой ример</h2>
       <p class="motivation__testimony">
         Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на
         Cat Energy Slim. Отличный результат без изнуряющих тренировок! При
