--- a/source/index.html
+++ b/source/index.html
@@ -101,7 +101,7 @@
             затрачено<br />
             времени
           </dt>
-          <dd class="motivation__value">60 дней</dd>
+          <dd class="motivation__value motivation__value--days">60 дней</dd>
         </div>
         <div class="motivation__item">
           <dt class="motivation__name">Затраты на питание:</dt>
