--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,7 +11,18 @@
         <div class="catalog__container">
           <div class="catalog__product-photo">
             <a href="#" class="catalog__link">
-              <img class="catalog__image" src="img/products/mobile-chicken-small.png" alt="Cat Energy Pro fish 500 gramm." width="68" height="78">
+              <picture>
+                <source media="(min-width: 1280px)" srcset="img/products/tablet-chicken-smal.png">
+                <source media="(min-width: 768px)" srcset="img/products/tablet-chicken-smal.png">
+                <img class="catalog__image" src="img/products/mobile-chicken-small.png" srcset="img/products/mobile-chicken-small@2x.png 2x" alt="Cat Energy Pro fish 500 gramm." width="68" height="78">
+              </picture>
+              <picture>
+                <source media="(min-width: 1300px)" srcset="img/chicken-small-desktop@1x.png 1x,
+                          img/chicken-small-desktop@2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x,
+                          img/chicken-small-tablet@2x.png 2x">
+                <img src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Cat Energy Pro 500 г" class="products-item__image">
+              </picture>
             </a>
           </div>
           <div class="catalog__product-info">
