Декоративные элементы внутренних страниц

--- a/source/form.html
+++ b/source/form.html
@@ -48,11 +48,11 @@
           <div class="form__group-contacts form__group-wrapper">
             <label class="form__label form__label--email" for="email">E-mail:<sup>*</sup>
               <input class="form__input form__input--email" type="number" id="email" placeholder="kuklachev@gmail.com" required>
-              <span class="form__icon-tel"></span>
+              <span class="form__icon form__icon-email"></span>
             </label>
             <label class="form__label form__label--sb" for="phone">Телефон:<sup>*</sup>
               <input class="form__input form__input--phone" type="tel" id="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="8 (960) 900-60-90" required>
-              <span class="form__icon-tel"></span>
+              <span class="form__icon form__icon--phone"></span>
             </label>
           </div>
         </fieldset>
