--- a/source/catalog.html
+++ b/source/catalog.html
@@ -38,7 +38,7 @@
         <div class="catalog__container">
           <div class="catalog__product-photo">
             <a href="#" class="catalog__link">
-              <img class="catalog__image" src="img/products/mobile-chicken-big.png" alt="Cat Energy Pro chicken 1000 gramm." width="84" height="101">
+              {% include "./templates/picture.twig" with {name: "products/chicken-big", class: "catalog__image"} %}
             </a>
           </div>
           <div class="catalog__product-info">
@@ -66,7 +66,7 @@
         <div class="catalog__container">
           <div class="catalog__product-photo">
             <a href="#" class="catalog__link">
-              <img class="catalog__image" src="img/products/mobile-fish-small.png" alt="Cat Energy Pro fish 500 gramm." width="68" height="78">
+              {% include "./templates/picture.twig" with {name: "products/fish-small", class: "catalog__image"} %}
             </a>
           </div>
           <div class="catalog__product-info">
@@ -94,7 +94,7 @@
         <div class="catalog__container">
           <div class="catalog__product-photo">
             <a href="#" class="catalog__link">
-              <img class="catalog__image" src="img/products/mobile-fish-big.png" alt="Cat Energy Pro fish 1000 gramm." width="84" height="101">
+              {% include "./templates/picture.twig" with {name: "products/fish-big", class: "catalog__image"} %}
             </a>
           </div>
           <div class="catalog__product-info">
@@ -122,7 +122,7 @@
         <div class="catalog__container">
           <div class="catalog__product-photo">
             <a href="#" class="catalog__link">
-              <img class="catalog__image" src="img/products/mobile-buckweat-small.png" alt="Cat Energy Pro buckweat 500 gramm." width="68" height="78">
+              {% include "./templates/picture.twig" with {name: "products/buckweat-small", class: "catalog__image"} %}
             </a>
           </div>
           <div class="catalog__product-info">
@@ -150,7 +150,7 @@
         <div class="catalog__container">
           <div class="catalog__product-photo">
             <a href="#" class="catalog__link">
-              <img class="catalog__image" src="img/products/mobile-buckweat-big.png" alt="Cat Energy Pro buckweat 1000 gramm." width="84" height="101">
+              {% include "./templates/picture.twig" with {name: "products/buckweat-big", class: "catalog__image"} %}
             </a>
           </div>
           <div class="catalog__product-info">
@@ -178,7 +178,7 @@
         <div class="catalog__container">
           <div class="catalog__product-photo">
             <a href="" class="catalog__link">
-              <img class="catalog__image" src="img/products/mobile-rice-small.png" alt="Cat Energy Pro rice 500 gramm." width="72" height="84">
+              {% include "./templates/picture.twig" with {name: "products/rise-small", class: "catalog__image"} %}
             </a>
           </div>
           <div class="catalog__product-info">
