Декоративные элементы внутренних страниц продолжение

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -178,7 +178,7 @@
         <div class="catalog__container">
           <div class="catalog__product-photo">
             <a href="" class="catalog__link">
-              {% include "./templates/picture.twig" with {name: "products/rise-small", class: "catalog__image"} %}
+              {% include "./templates/picture.twig" with {name: "products/rice-small", class: "catalog__image"} %}
             </a>
           </div>
           <div class="catalog__product-info">
@@ -221,7 +221,6 @@
     </ul>
   </div>
   <section class="goods page__centerer">
-    {# <div class="page__centerer"> #}
       <h2 class="goods__title">Дополнительные товары</h2>
       <ul class="goods__list">
         <li class="goods__item more-goods">
@@ -272,8 +271,6 @@
           <p class="promotions__text">Закажите все и получите чехол для кота в подарок!</p>
         </div>
       </div>
-      {#
-    </div> #}
   </section>
   <section class="contacts contacts--theme">
     <div class="contacts__wrapper page__centerer">
