--- a/source/form.html
+++ b/source/form.html
@@ -15,7 +15,7 @@
     <form class="form page__centerer" action="https://echo.htmlacademy.ru">
       <div class="form__content-wrapper">
         <div class="form__group-wrapper">
-          <fieldset class="form__group form__legend">
+          <fieldset class="form__group">
             <legend class="visually-hidden">Информация о питомце</legend>
             <label for="name" class="form__label form__label--name">Имя:<sup>*</sup>
               <input class="form__input form__input--info" type="text" id="name" placeholder="Барсик" required>
@@ -28,6 +28,7 @@
             </label>
           </fieldset>
           <fieldset class="form__filter-radio form__filter--border">
+            <div class="form__filter-wrapper">
             <legend class="visually-hidden">Нужды питомца</legend>
             <label class="form__label form__label--radio" for="weight-loss">
               <input class="form__radio" type="radio" name="pet-needs" id="weight-loss" checked>
@@ -41,10 +42,11 @@
               <input class="form__radio" type="radio" name="pet-needs" id="doubts">
               Не знаю (Нужен ваш совет)
             </label>
+            </div>
           </fieldset>
         </div>
         <fieldset class="form__contacts form__legend">
-          <legend class="form__legend form__legend--contacts">Контактные данные (владельца кота)</legend>
+          <legend class="form__legend form__legend--contacts heading">Контактные данные (владельца кота)</legend>
           <div class="form__group-contacts form__group-wrapper">
             <label class="form__label form__label--email" for="email">E-mail:<sup>*</sup>
               <input class="form__input form__input--email" type="number" id="email" placeholder="kuklachev@gmail.com" required>
@@ -57,11 +59,11 @@
           </div>
         </fieldset>
         <fieldset class="form__comments form__legend">
-          <legend class="form__legend form__legend-comment">Комментарий</legend>
+          <legend class="form__legend form__legend--comment heading">Комментарий</legend>
           <textarea class="form__feedback" name="comment" cols="30" rows="10">Расскажите обо всех повадках кота</textarea>
         </fieldset>
         <fieldset class="form__add-ons form__legend">
-          <legend class="form__legend form__legend-addons">Дополнительно</legend>
+          <legend class="form__legend form__legend--addons heading">Дополнительно</legend>
           <ul class="form__addons-list">
             <li class="form__addons-item">
               <label class="form__label form__label-checkbox" for="sugar-sub">
@@ -86,28 +88,12 @@
           </ul>
           <div class="button-container">
             <button class="form__button button" type="button">отправить заявку</button>
-            <span class="form__icon-required">* — Обязательные поля</span>
+            <span class="form__required-text">* — Обязательные поля</span>
           </div>
         </fieldset>
     </div>
 
     </form>
-  </section>
-  <section class="contacts contacts--theme">
-    <div class="contacts__wrapper page__centerer">
-      <h2 class="visually-hidden">Наш адрес</h2>
-      <div class="contacts__informative">
-        <p class="contacts__advertisement">
-          приглашаем к сотрудничеству дилеров!
-        </p>
-      </div>
-      <address class="contacts__address">
-        ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
-      </address>
-    </div>
-    <div class="contacts__location">
-      <iframe class="contacts__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya%20Konyushennaya%20St%2C%2019%2F8%2C%20Sankt-Peterburg%2C%20Russia%2C%20191186!5e0!3m2!1sen!2sus!4v1650547930435!5m2!1sen!2sus" style="border:0;" allowfullscreen="" title="Офис компании по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
   </section>
 </main>
 {% endblock %}
