Декоративные элементы внутренних страниц

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -213,10 +213,10 @@
             </a>
           </div>
           <div class="catalog__info catalog__info--more">
-            <a href="#" class="catalog__link">
+            <a href="#" class="catalog__link catalog__link--more">
               <h2 class="catalog__title catalog__title--more">Показать еще 100500 товаров</h2>
             </a>
-            <p class="catalog__subtitle catalog__subtitle--last">На самом деле вкусов гораздо
+            <p class="catalog__subtitle catalog__subtitle--more">На самом деле вкусов гораздо
               больше!</p>
           </div>
         </div>
@@ -225,7 +225,9 @@
     </ul>
   </div>
   <section class="goods page__centerer">
+    <div class="goods__title-wrapper">
       <h2 class="goods__title">Дополнительные товары</h2>
+      </div>
       <ul class="goods__list">
         <li class="goods__item more-goods">
           <div class="more-goods__container">
