--- a/source/index.html
+++ b/source/index.html
@@ -14,8 +14,7 @@
       </div>
     </div>
   </section>
-  <section class="programs">
-    <div class="page__centerer">
+  <section class="programs page__centerer">
       <h2 class="visually-hidden">Доступные программы</h2>
       <ul class="programs__list">
         <li class="programs__item">
@@ -42,42 +41,42 @@
           </div>
         </li>
       </ul>
-    </div>
   </section>
   <section class="principles">
     <div class="page__centerer">
-      <h2 class="principles__title">Как это работает</h2>
-      <ul class="principles__list">
-        <li class="principles__item principles__item--greens">
+        <h2 class="principles__title">Как это работает</h2>
+        <ul class="principles__list">
+          <li class="principles__item principles__item--greens">
 
-          Функциональное питание содержит только полезные питательные
-          вещества.
+            Функциональное питание содержит только полезные питательные
+            вещества.
 
-        </li>
-        <li class="principles__item principles__item--solutable">
+          </li>
+          <li class="principles__item principles__item--solutable">
 
-          Выпускается в виде порошка, который нужно лишь залить кипятком и
-          готово.
+            Выпускается в виде порошка, который нужно лишь залить кипятком и
+            готово.
 
-        </li>
-        <li class="principles__item principles__item--eat">
+          </li>
+          <li class="principles__item principles__item--eat">
 
-          Замените один-два приема обычной еды на наше функциональное
-          питание.
+            Замените один-два приема обычной еды на наше функциональное
+            питание.
 
-        </li>
-        <li class="principles__item principles__item--clock">
+          </li>
+          <li class="principles__item principles__item--clock">
 
-          Уже через месяц наслаждайтесь изменениями к лучшему вашего
-          питомца!
+            Уже через месяц наслаждайтесь изменениями к лучшему вашего
+            питомца!
 
-        </li>
-      </ul>
-    </div>
+          </li>
+        </ul>
+      </div>
+
   </section>
   <section class="motivation">
-    <div class="motivation__wrapper page__centerer">
-      <div class="motivation__content">
+    <div class="motivation__wrapper">
+      <div class="motivation__content page__centerer">
         <h2 class="motivation__title">Живой пример</h2>
         <p class="motivation__testimony">
           Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на
@@ -118,8 +117,8 @@
           </figure>
           <div class="motivation__controls">
             <button class="motivation__button">Было</button>
-            <div class="motivation__thumb">
-              <input class="motivation__range" type="range" min="0" max="10" aria-label="Сравнить">
+            <div class="motivation__range">
+              <div class="motivation__thumb"></div>
             </div>
             <button class="motivation__button">Стало</button>
           </div>
