Move the centerer to the parent

--- a/source/index.html
+++ b/source/index.html
@@ -75,8 +75,8 @@
 
   </section>
   <section class="motivation">
-    <div class="motivation__wrapper">
-      <div class="motivation__content page__centerer">
+    <div class="motivation__wrapper page__centerer">
+      <div class="motivation__content">
         <h2 class="motivation__title">Живой пример</h2>
         <p class="motivation__testimony">
           Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на
